# allure3_report_server

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
backend/: .env.docker  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_environment.py  0003_add_allure_config.py  0004_add_failure_kb.py
backend/app/: config.py  database.py  main.py
backend/app/mcp/: prompts.py  resources.py  server.py  tools.py
backend/app/models/: __init__.py
backend/app/routers/: compare.py  dashboard.py  projects.py  reports.py
backend/app/schemas/: __init__.py
backend/app/services/: allure_cli.py  cleanup.py  embedding.py  failure_fingerprint.py  failure_kb.py  health.py  result_parser.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts  compare.ts  dashboard.ts  projects.ts  reports.ts
frontend/src/components/: AllureConfigEditor.vue  AppHeader.vue  AppSidebar.vue  PieChart.vue  StatsCards.vue  StatusTag.vue  StepTree.vue  TrendChart.vue
frontend/src/router/: index.ts
frontend/src/stores/: dashboard.ts  project.ts  run.ts
frontend/src/utils/: format.ts  status.ts
frontend/src/views/: ComparePage.vue  DashboardPage.vue  ProjectDetail.vue  ProjectsPage.vue  ReportViewer.vue  RunDetail.vue  SettingsPage.vue  TestDetail.vue  ToolsPage.vue
scripts/: upload.py
